# Projects

Projects/NFTProjects/NFTProject/app/: CMakeLists.txt  build.gradle
Projects/NFTProjects/NFTProject/app/src/androidTest/java/com/nftsimple/: ExampleInstrumentedTest.kt
Projects/NFTProjects/NFTProject/app/src/main/: AndroidManifest.xml
Projects/NFTProjects/NFTProject/app/src/main/cpp/: native-lib.cpp  nftSimple.cpp
Projects/NFTProjects/NFTProject/app/src/main/cpp/ARToolKit/SRC/AR/: arDetectMarker.c  arImageProc.c
Projects/NFTProjects/NFTProject/app/src/main/cpp/ARToolKit/SRC/Gl/: gsub_es.c
Projects/NFTProjects/NFTProject/app/src/main/cpp/ARToolKit/SRC/KPM/FreakMatcher/matchers/: feature_store.h  feature_store_io.h
Projects/NFTProjects/NFTProject/app/src/main/cpp/ARToolKit/include/AR/: IMUData.h
Projects/NFTProjects/NFTProject/app/src/main/java/com/nftsimple/: CameraSurface.java  MainActivity.java  MainApplication.java  Renderer.java
Projects/NFTProjects/NFTProject/app/src/test/java/com/nftsimple/: ExampleUnitTest.kt
Projects/NFTProjects/NFTProject/gradle/wrapper/: gradle-wrapper.properties
